# pi-tk-flow

./: .gitignore  AGENTS.md  CONTEXT-GUIDE.md  MODEL-CONFIGURATION.md  PROJECT.md  README.md  REFACTOR-SIMPLIFY-SPEC.md  anchor-context.md  close-summary.md  context.md  package.json  pyproject.toml
.tf/: AGENTS.md  progress.md
.tickets/: ptf-102j.md  ptf-19a3.md  ptf-1q8n.md  ptf-21fw.md  ptf-3nor.md  ptf-53pu.md  ptf-62c4.md  ptf-7vl1.md  ptf-9c04.md  ptf-b8p5.md  ptf-bv4b.md  ptf-cb32.md  ptf-cgx4.md  ptf-erm8.md  ptf-fo04.md  ptf-fqvd.md  ptf-gg6c.md  ptf-it5r.md  ptf-leyd.md  ptf-liv1.md  ptf-n5ir.md  ptf-niv3.md  ptf-ucgi.md  ptf-vln5.md  ptf-vzfu.md  ptf-wuvd.md  ptf-wvze.md
.tk-loop-state/: metrics.json  processed.jsonl
.tk-loop-state-ac-test/: failed.jsonl  metrics.json  processed.jsonl
docs/: AGENTS.md  CONTEXT-GUIDE.md  FRAMEWORK-ASSESSMENT-AND-ROADMAP.md  MODEL-CONFIGURATION.md  PROJECT.md  README.md  REFACTOR-SIMPLIFY-SPEC.md
extensions/: tf-bootstrap.ts  tf-ui.ts  tk-bootstrap.ts
prompts/: tf-bootstrap.md  tf-brainstorm.md  tf-implement.md  tf-init.md  tf-plan-check.md  tf-plan-refine.md  tf-plan.md  tf-refactor.md  tf-simplify.md  tf-ticketize.md  tk-bootstrap.md  tk-brainstorm.md  tk-implement.md  tk-plan-check.md  tk-plan-refine.md  tk-plan.md  tk-ticketize.md
python/: README.md  pyproject.toml
python/pi_tk_flow_ui/: __init__.py  __main__.py  app.py  board_classifier.py  path_resolution.py  plan_scanner.py  ralph-loop.sh  ralph_loop.py  styles.tcss  tf-ralph-loop.sh  tf_ralph_loop.py  ticket_loader.py  topic_scanner.py
tests/: conftest.py  (+9 more)
(+130 files in other folders)
